--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
+asttokens==2.2.0
+backcall==0.2.0
 bcrypt==4.0.1
 blinker==1.5
+botocore==1.29.18
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
+decorator==5.1.1
+executing==1.2.0
 Flask==2.2.2
 Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.13.1
@@ -12,14 +17,34 @@ Flask-WTF==1.0.1
 greenlet==2.0.1
 idna==3.4
 importlib-metadata==5.1.0
+ipython==8.7.0
 itsdangerous==2.1.2
+jedi==0.18.2
 Jinja2==3.1.2
+jmespath==1.0.1
 MarkupSafe==2.1.1
+matplotlib-inline==0.1.6
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.33
 psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.13.0
+python-dateutil==2.8.2
 python-dotenv==0.21.0
+python-http-client==3.3.7
 requests==2.28.1
+s3transfer==0.6.0
+sendgrid==6.9.7
+six==1.16.0
 SQLAlchemy==1.4.44
+stack-data==0.6.2
+starkbank-ecdsa==2.2.0
+traitlets==5.6.0
 urllib3==1.26.13
+wcwidth==0.2.5
 Werkzeug==2.2.2
 WTForms==3.0.1
 zipp==3.11.0
