--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,20 @@ bcrypt==4.0.1
 blinker==1.5
 botocore==1.29.18
 certifi==2022.9.24
+cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
+cryptography==38.0.4
 decorator==5.1.1
+Deprecated==1.2.13
+dnspython==2.2.1
+email-validator==1.3.0
 executing==1.2.0
 Flask==2.2.2
 Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.13.1
 Flask-DotEnv==0.1.2
+Flask-Mail==0.9.1
 Flask-SQLAlchemy==3.0.2
 Flask-WTF==1.0.1
 greenlet==2.0.1
@@ -22,6 +28,7 @@ itsdangerous==2.1.2
 jedi==0.18.2
 Jinja2==3.1.2
 jmespath==1.0.1
+jwcrypto==1.4.2
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
 parso==0.8.3
@@ -31,7 +38,9 @@ prompt-toolkit==3.0.33
 psycopg2-binary==2.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycparser==2.21
 Pygments==2.13.0
+PyJWT==2.6.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-http-client==3.3.7
@@ -46,5 +55,6 @@ traitlets==5.6.0
 urllib3==1.26.13
 wcwidth==0.2.5
 Werkzeug==2.2.2
+wrapt==1.14.1
 WTForms==3.0.1
 zipp==3.11.0
