--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,14 @@ email-validator==1.3.0
 executing==1.2.0
 Flask==2.2.2
 Flask-Bcrypt==1.0.1
+Flask-Cors==3.0.10
 Flask-DebugToolbar==0.13.1
 Flask-DotEnv==0.1.2
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==2.0.1
+gunicorn==20.1.0
 idna==3.4
 importlib-metadata==5.1.0
 ipython==8.7.0
@@ -34,6 +36,7 @@ matplotlib-inline==0.1.6
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.3.0
 prompt-toolkit==3.0.33
 psycopg2-binary==2.9.5
 ptyprocess==0.7.0
